<resources>
    <string name="app_name">LibraryApp</string>
    <string name="hint_name">Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="hint_token">Token</string>
    <string name="hint_student_id">Student ID</string>
    <string name="text_login">Login</string>
    <string name="text_logout">Logout</string>
    <string name="text_register">Register</string>
    <string name="error_message_name">Enter Full Name</string>
    <string name="error_message_email">Enter Valid Email</string>
    <string name="error_message_password">Enter Password</string>
    <string name="success_message">Registration Successful</string>
    <string name="text_not_member">No account yet? Create one</string>
    <string name="text_already_member">Already a member? Login</string>
    <string name="text_resend_token">Resend Token</string>
    <string name="error_email_exists">Email Already Exists</string>
    <string name="error_password_match">Password Does Not Matches</string>
    <string name="error_valid_email_password">Wrong Email or Password</string>
    <string name="action_settings">Settings</string>
    <string name="text_hello">Hello,</string>
    <string name="text_title">Android Tutorials Hub</string>
    <string name="text_confirm_token">Account Confirm</string>
    <string name="text_patron_search_feature">Search Book</string>
    <string name="text_patron_view_borrowed_feature">View My Borrowed Books</string>
    <string name="text_patron_view_waitlist_feature">View My Waitlist Books</string>
    <string name="text_patron_view_reservation_feature">View My Reserved Books</string>
    <string name="text_patron_view_balance_feature">View My Balance</string>

</resources>
