<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <android.support.v7.widget.AppCompatButton
        android:id="@+id/appCompatButtonSearchBorrowedBook"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_margin="20dp"
        android:background="@color/colorTextHint"
        android:text="@string/text_patron_search_feature" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/appCompatButtonViewBorrowedBook"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_margin="20dp"
        android:background="@color/colorTextHint"
        android:text="@string/text_patron_view_borrowed_feature" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/appCompatButtonViewBookWaitingList"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_margin="20dp"
        android:background="@color/colorTextHint"
        android:text="@string/text_patron_view_waitlist_feature" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/appCompatButtonViewBookReservedList"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_margin="20dp"
        android:background="@color/colorTextHint"
        android:text="@string/text_patron_view_reservation_feature" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/appCompatButtonViewBalanceList"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_margin="20dp"
        android:background="@color/colorTextHint"
        android:text="@string/text_patron_view_balance_feature" />

</LinearLayout>